# stockForecastingBackend

./: .gitignore  CRITICAL_FIX_SUMMARY.md  Dockerfile  PROJECT_ANALYSIS_SUMMARY.md  README.md  TENSOR_SHAPE_FIX_SUMMARY.md  TODO_ENHANCED.md  UNICODE_FIX_SUMMARY.md  docker-compose.yaml  enabled_assets.json  eval.py  graph_requirements.txt  inference.py  liquid_requirements.txt  main.py  pyproject.toml  pytest.ini  requirements.txt  train.py  train_deep.py  train_graph.py  train_liquid.py  train_liquid_graph.py
.github/workflows/: pylint.yml
app/DexSimulator/: .gitignore  1inch_routeur.py  finding.md  interface_api.py  main.py  setup,py  temp,py  test.py
app/DexSimulator/hygdraDexSim/dataclass/: __init__.py  action.py  chain.py  transaction.py  wallet.py
app/api/: Dockerfile  inference.py  main.py  pyproject.toml  requirements.txt  test.py
app/api/datamodel/: sequence.py  ticker_cluster.py
app/api/weight/: basemodel.pt  best_model.pt
app/api/weight/days/: big.pt  cac40.pt  crypto-standard.pt  thisiselonmusk.pt
app/frontend/: Dockerfile  main.py  pyproject.toml  requirements.txt  test.py
app/sheduler/: Dockerfile  enabled_assets.json  finetune.py  finetune_temp.py  inference.py  inference_temp.py  pyproject.toml  requirements.txt  sheduler.py
app/sheduler/data/: big_days.csv  cac40_days.csv  crypto-standard_days.csv  crypto-standard_minutes.csv  defi_days.csv  energy_days.csv  finance_days.csv  gaming_days.csv  memecoin_days.csv  tech_days.csv  thisiselonmusk_days.csv  thisiselonmusk_minutes.csv  web3_days.csv  web3_minutes.csv
app/sheduler/datamodel/: get_tickers.py  sequence.py  ticker_cluster.py
app/sheduler/weight/: best_model.pth
app/sheduler/weight/days/: best_model.pth  big.pth  cac40.pth  crypto-standard.pth  defi.pth  energy.pth  finance.pth  gaming.pth  tech.pth  thisiselonmusk.pth  web3.pth
app/sheduler/weight/hours/: best_model.pth
app/sheduler/weight/minutes/: best_model.pth  crypto-standard.pth  defi.pth  gaming.pth  memecoin.pth  thisiselonmusk.pth  web3.pth
app/sheduler/weight/thirty/: best_model.pth
cleanup/: fix_unicode_tests.py  setup_old.py  train_liquid_graph_todo.py  train_liquid_todo.py
hygdra_forecasting/: __init__.py
hygdra_forecasting/dataloader/: GraphDataloader.py  __init__.py  dataloader.py  dataloader_kraken.py
hygdra_forecasting/model/: __init__.py  build.py  build_graph.py  build_liquid.py  eval.py  inference.py  train.py  train_graph.py
hygdra_forecasting/utils/: __init__.py  dataset.py  indicator.py  kraken_test.py  learning_rate_sheduler.py  ohlv.py  preprocessing.py  sequence.py
tests/: master_test_report_20250922_081920.json  master_test_report_20250922_081955.json  master_test_report_20250922_082351.json  master_test_report_20250922_082643.json  run_all_tests.py  test_fixed_tensor_shapes.py  test_inference_fix.py  test_inference_fix_pytest.py  test_model_consistency.py  test_results.json  test_simple.py  test_training_consistency.py  training_test_results.json
weight/: 0_weight.pth  120_weight.pth  160_weight.pth  40_weight.pth  80_weight.pth  best_model.pt  best_model.pth
weight/graph/LtsmAttentionforecastPred/: best_model.pth
weight/graph/fold/: best_model.pth
weight/standard/ConvCausalLTSM/: best_model.pth
weight/standard/LtsmAttentionforecastPred/: best_model.pth
