[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hygdra-forecasting"
version = "0.1.0"
description = "Fast stock trend forecasting algorithm to help you trade safely."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GNU General Public License" }
authors = [
    { name = "Bucamp Axle", email = "axle.bucamp@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "asyncio>=4.0.0",
    "dash>=3.2.0",
    "fastapi>=0.117.1",
    "pandas>=2.0.3",
    "plotly>=6.3.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "python-multipart>=0.0.20",
    "redis>=6.1.1",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "torch>=2.5.1",
    "typing>=3.10.0.0",
    "uvicorn>=0.33.0",
    "yfinance>=0.2.66",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["hygdra_forecasting*"]

[tool.setuptools.package-data]
"*" = ["*"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pandas-stubs>=2.0.3.230814",
    "pydantic>=2.10.6",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.0.20241016",
]

