[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hygdra-forecasting-api"
version = "0.1.0"
description = "FastAPI backend for Hygdra Forecasting stock prediction service"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GNU General Public License" }
authors = [
    { name = "Bucamp Axle", email = "axle.bucamp@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.3",
    "fastapi>=0.117.1",
    "uvicorn>=0.33.0",
    "python-multipart>=0.0.20",
    "redis>=6.1.1",
    "pydantic>=2.10.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["datamodel*"]

[tool.setuptools.package-data]
"*" = ["*"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pandas-stubs>=2.0.3.230814",
    "types-redis>=4.6.0.20241004",
    "httpx>=0.27.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]
