[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hygdra-forecasting-frontend"
version = "0.1.0"
description = "Dash frontend dashboard for Hygdra Forecasting stock prediction service"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GNU General Public License" }
authors = [
    { name = "Bucamp Axle", email = "axle.bucamp@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "dash>=3.2.0",
    "plotly>=6.3.0",
    "requests>=2.32.4",
    "pandas>=2.0.3",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pandas-stubs>=2.0.3.230814",
    "types-requests>=2.32.0.20241016",
    "pytest>=8.3.5",
    "selenium>=4.15.0",
]
