[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hygdra-forecasting-scheduler"
version = "0.1.0"
description = "Scheduler service for Hygdra Forecasting model training and inference automation"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GNU General Public License" }
authors = [
    { name = "Bucamp Axle", email = "axle.bucamp@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "yfinance>=0.2.66",
    "pandas>=2.0.3",
    "torch>=2.5.1",
    "schedule>=1.2.2",
    "python-multipart>=0.0.20",
    "redis>=6.1.1",
    "requests>=2.32.4",
    "numpy>=1.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["datamodel*"]

[tool.setuptools.package-data]
"*" = ["*"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pandas-stubs>=2.0.3.230814",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.0.20241016",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]
